--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@headlessui/react": "^2.0.4",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
+    "@types/lodash": "^4.17.7",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
