fix: specify the web app base url for github authorization redirection

--- a/src/config.json
+++ b/src/config.json
@@ -1,9 +1,11 @@
 {
     "environment": "production",
     "production": {
+        "REACT_APP_BASE_URL":"https://forums-platform.vercel.app/",
         "REACT_APP_API_BASE_URL":"https://forums-backend.xyz/"
     },
     "development": {
+        "REACT_APP_BASE_URL":"https://localhost:5173/",
         "REACT_APP_API_BASE_URL":"http://localhost:3030/"
     }
 }
