--- a/src/config.json
+++ b/src/config.json
@@ -2,7 +2,7 @@
     "environment": "production",
     "production": {
         "REACT_APP_BASE_URL":"https://forums-platform.vercel.app/",
-        "REACT_APP_API_BASE_URL":"https://forums-backend.xyz/"
+        "REACT_APP_API_BASE_URL":"https://forums-backend-development.up.railway.app/"
     },
     "development": {
         "REACT_APP_BASE_URL":"https://localhost:5173/",
